--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <div contenteditable="true">
         <h1>this is GIT server</h1>
-        <p>Welcome to viknesh.com</p>
+        <p>Welcome to vikneshwaran.com</p>
  
     </div>
 </body>
